--- a/style.css
+++ b/style.css
@@ -4,9 +4,62 @@ body {
     margin: 0;
 }
 
+ol {
+    list-style-type: none;
+    display: flex;
+    gap: 24px;
+    font-size: 20px;
+}
+
 .first {
     height: 535px;
     flex-direction: column;
+}
+
+.first .top {
+    margin-top: -1px;
+    justify-content: space-between;
+}
+
+.first .bottom {
+    margin-top: 90px;
+}
+
+.first .bottom .left {
+    padding-right: 50px;
+    width: 450px;
+}
+
+.first .bottom .right {
+    background: #6D747D;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+}
+
+.first .top, .first .bottom {
+    display: flex;
+    margin-left: 210px;
+    margin-right: 210px;
+    align-items: center;
+}
+
+.first .bottom .left, .first .bottom .right {
+    height: 240px;
+    border: 2px solid red;
+}
+
+.hero {
+    font-size: 48px;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.subhero {
+    margin-top: 0;
+    font-size: 18px;
 }
 
 .second {
@@ -33,8 +86,4 @@ body {
 
 .first, .second, .third, .forth, .fifth {
     display: flex;
-}
 
-.first .top, .first .bottom {
-    display: flex;
-}
