--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    font-family: 'Open Sans', sans-serif
 }
 
 ol {
     list-style-type: none;
     display: flex;
     gap: 24px;
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: 100;
 }
 
 .first {
@@ -43,6 +45,10 @@ ol {
     height: 240px;
 }
 
+.first .bottom .right h2 {
+    font-weight: 200;
+}
+
 .first .top, .first .bottom {
     display: flex;
     margin-left: 210px;
@@ -57,7 +63,7 @@ ol {
 }
 
 .subhero {
-    margin-top: 0;
+    margin-top: 5px;
     font-size: 18px;
 }
 
@@ -104,6 +110,7 @@ ol {
     margin-top: 10px;
     font-size: 18px;
     color: #4B5563;
+    font-weight: 200;
 }
 
 .third {
@@ -126,6 +133,7 @@ ol {
     font-size: 36px;
     height: 160px;
     font-style: italic;
+    font-weight: lighter;
 }
 
 .third .quote .bottom {
@@ -161,7 +169,7 @@ ol {
 }
 
 .forth .container .left .top {
-    margin-bottom: -35px;
+    margin-bottom: -30px;
 }
 
 #second-button {
@@ -184,6 +192,7 @@ ol {
 
 .fifth h2 {
     margin-left: 35px;
+    font-weight: 300;
 }
 
 .first, .fifth {
@@ -193,4 +202,3 @@ ol {
 
 .first, .second, .third, .forth, .fifth {
     display: flex;
-
